Mshades eval, stage 1

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,30 +1,40 @@
-The design \& development of the Mirrorshades platform was driven both to investigate the promise of mobile PR systems in general \& to assess their suitability when applied to a particular case study, as a new modality for interacting with virtual content within the context of cultural heritage sites. For this purpose, evaluation of the platform addresses both its reception compared to `traditional' virtual heritage experiences \& reception to different PR implementations in terms of the default view \& transition styles provided.
+The design \& development of the Mirrorshades platform was driven both to investigate the promise of mobile PR systems in general \& to assess their suitability when applied to a particular case study as a new modality for interacting with virtual content within the context of cultural heritage sites. For this purpose, evaluation of the platform addresses both its reception compared to `traditional' virtual heritage experiences \& reactions to different PR implementations in terms of the default view \& provided transition styles.
 
 %=========================================================================================================
 
-Final video
-\url{https://www.youtube.com/watch?v=UsDRPjDwr8A}
-screenshots
+%Final video
+%\url{https://www.youtube.com/watch?v=UsDRPjDwr8A}
+%screenshots
 
 %=========================================================================================================
 
-\section{Overview of Investigations}
+\section{Overview}
 
-Participants were sourced by adverts disseminated via an internal university memo system, which sends an email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study'}, \textit{`investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was taken instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system itself rather than the experience of \textit{using} the system.
+The evaluation process was divided into two stages; the first assessed the utility of Mirrorshades as a mobile PR platform in comparison to `traditional' alternate reality techniques used within a virtual heritage context, while the second investigated participants' preferences \& reactions to different transition styles to inform further PR implementations. A combination of qualitative \& quantitative data were collected for both stages, as the nature of the platform experience is such that purely quantitative data is not sufficient to gain an insight into the desired metrics, but can be used to corroborate, or rebut, qualitative responses \& observations.
 
-In total 17 participants, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in user studies, each lasting 20-30 minutes.
-
-
-
-
-
-
-
+Participants were sourced by adverts disseminated via an internal university memo system, which sends an email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study'}, \textit{`investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was taken instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system \& its implementation rather than the experience of \textit{using} the system. In total 17 participants, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in user studies, each lasting 20-30 minutes.
 
 %=========================================================================================================
 
-\section{Investigation 1 - The Case for Mobile XR}
-\label{investigation1}
+\section{Stage 1 - The Case for PR in Virtual Heritage}
+
+Previously when VR has been employed in virtual heritage scenarios, it has predominantly been implemented via CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre will be offered the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of the locations, its contents \& actors. While some of these CAVE installations featured physical control interfaces such as joystick \& 3D mouse~\cite{cabral:x3dexperience} \& even haptic interfaces~\cite{Christou2006}, others have tracked user movement (whether just head, or full body  such as in figure \ref{VTTP_projection.png}).
+
+One point in common to these CAVE experiences is that they are experienced with a disconnect to the RW site that their VR visuals represent. The CAVE itself immerses users in VR visuals \& does not permit them to see any of their RW surroundings. Furthermore, the physical size of the CAVE limits the amount in any particular direction that a user can move.
+
+With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effect by Oculus, their use in place of a CAVE is becoming more legitimate. The OVW group's experience with presenting both experts \& interested amateurs, young \& old, with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. Thus far these interactions have taken place in a physically static scenario; that is, the user remains in one place when standing or sitting with the HMD \& uses an Xbox controller, keyboard \& mouse or NUI gestures to control movement of their virtual presence.
+
+In this first stage of the evaluation a comparison is made between this `traditional' style of interacting with VR content at a cultural heritage site, wherein the virtual is experienced in isolation from the real with both temporal \& spatial separation \& the `new' style afforded by the Mirrorshades platform in which the virtual can be experienced at the same time as the real by allowing the user to move around their RW environment \& transition into seeing the VR environment from the equivalent vantage point at any time.
+
+
+
+
+
+
+
+Participants were first givn the opportunity to familiarise themselves with the Rift by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo is distributed by Oculus with the Rift Unity integration
+
+
 This first investigation will compare interaction with the RW \& VR chapel using Mirrorshades to interaction with the same content separately, the latter being the approach usually adopted for dissemination of VR content in cultural heritage contexts. Participants will complete a task that will promote active comparison \& contrast of the RW \& VR environments, whilst navigating a set route. This investigation will gauge through experimentation whether the Mirrorshades platform provides any value over the traditional manner in which the same VR content might be disseminated at a cultural heritage site.
 
 %spatial \& temporal separation
