--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -18,34 +18,31 @@ Participants were sourced by adverts disseminated via an internal university mem
 
 \section{Stage 1 - The Case for PR in Virtual Heritage}
 
-Previously when VR has been employed in virtual heritage scenarios, it has predominantly been implemented via CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre will be offered the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of the locations, its contents \& actors. While some of these CAVE installations featured physical control interfaces such as joystick \& 3D mouse~\cite{cabral:x3dexperience} \& even haptic interfaces~\cite{Christou2006}, others have tracked user movement (whether just head, or full body  such as in figure \ref{VTTP_projection.png}).
+Previously when VR has been employed in virtual heritage scenarios, it has predominantly been implemented via CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre will be offered the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of the locations, its contents \& actors. While some of these CAVE installations featured physical control interfaces such as joystick \& 3D mouse~\cite{cabral:x3dexperience} \& even haptic interfaces~\cite{Christou2006}, others have tracked user movement (whether just head, or full body  gestures such as in figure \ref{VTTP_projection.png}). In common among these CAVE experiences is the fact that they are experienced with a disconnect to the RW site that their VR visuals represent. The CAVE itself immerses users in VR visuals \& does not permit them to see any of their RW surroundings. Furthermore, the physical size of the CAVE limits the amount in any particular direction that a user can move, even if their position is tracked by the systeem.
 
-One point in common to these CAVE experiences is that they are experienced with a disconnect to the RW site that their VR visuals represent. The CAVE itself immerses users in VR visuals \& does not permit them to see any of their RW surroundings. Furthermore, the physical size of the CAVE limits the amount in any particular direction that a user can move.
+With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use in place of CAVEs for virtual heritage deployments is becoming more realistic. The OVW group's experience with presenting both experts \& interested amateurs, young \& old, with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. Thus far these interactions have taken place in scenarios similar to those of existing CAVE scenarios; the user remains physically stationary \& uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe their RW environment.
 
-With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effect by Oculus, their use in place of a CAVE is becoming more legitimate. The OVW group's experience with presenting both experts \& interested amateurs, young \& old, with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. Thus far these interactions have taken place in a physically static scenario; that is, the user remains in one place when standing or sitting with the HMD \& uses an Xbox controller, keyboard \& mouse or NUI gestures to control movement of their virtual presence.
+In this first stage of the evaluation a comparison is made between this `traditional' style of interacting with VR content at a cultural heritage site, wherein the virtual is experienced in isolation from the real with both temporal \& spatial separation \& the `new' style afforded by the Mirrorshades platform, in which the virtual can be experienced in tandem with the real by allowing the user to move around their RW environment \& transition into seeing the VR environment from the equivalent vantage point at any time.
 
-In this first stage of the evaluation a comparison is made between this `traditional' style of interacting with VR content at a cultural heritage site, wherein the virtual is experienced in isolation from the real with both temporal \& spatial separation \& the `new' style afforded by the Mirrorshades platform in which the virtual can be experienced at the same time as the real by allowing the user to move around their RW environment \& transition into seeing the VR environment from the equivalent vantage point at any time.
-
-
-
-
-
-
-
-Participants were first givn the opportunity to familiarise themselves with the Rift by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo is distributed by Oculus with the Rift Unity integration
-
-
-This first investigation will compare interaction with the RW \& VR chapel using Mirrorshades to interaction with the same content separately, the latter being the approach usually adopted for dissemination of VR content in cultural heritage contexts. Participants will complete a task that will promote active comparison \& contrast of the RW \& VR environments, whilst navigating a set route. This investigation will gauge through experimentation whether the Mirrorshades platform provides any value over the traditional manner in which the same VR content might be disseminated at a cultural heritage site.
-
-%spatial \& temporal separation
+%=========================================================================================================
 
 \subsection{Setting \& Task}
-This investigation comprises two phases;
+
+Participants were first given the opportunity to familiarise themselves with the Rift by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo was by Oculus themselves \& is distributed with the Rift Unity integration package. It represented at the time a very polished \& stable DK1 experience, ideal for introducing inexperienced users to HMD based VR. It was thus used to give participants an opportunity to acclimatize to the Rift, in order to reduce skewing their subsequent experiences with the St Salvator's chapel model due to drastically different levels of familiarity.
+
+Once the participants have become comfortable with the DK1 via the Tuscany demo, they explore the RW \& VR chapels in two different scenarios.
 
 \begin{enumerate}
-	\item Participants will experience the RW \& VR chapels separately. They will navigate the VR chapel from a stationary position, as one might expect to see a VR installation at a cultural heritage site, using the Xbox controller to move around the VR environment observed via the HMD. The HMD will obscure their view of the RW chapel around them. Subsequently, they will navigate the RW chapel without the HMD or any associated equipment.
-	\item Participants will experience the RW \& VR chapels in tandem using the Mirrorshades platform. They will wear the HMD, holding the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& battery pack in a satchel worn over one shoulder. One style of transition will be available to the participants during this phase.
+	\item Participants experience the RW \& VR chapels separately. They navigate the VR chapel from a stationary position, as VR has traditionally been employed at cultural heritage sites via CAVE installations, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring their view of the RW chapel around them. Subsequently, they navigate the RW chapel without the DK1 or any associated equipment.
+	\item Participants experience the RW \& VR chapels in tandem using the Mirrorshades platform. They wear the DK1, holding the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over one shoulder. Pressing a button on the Xbox controller triggers a transition between fully RW \& fully VR visual stimuli being displayed by the DK1.
 \end{enumerate}
+
+The first scenario represents the `traditional' scenario of the use of VR at a cultural heritage site, in which the user experiences the real site \& the corresponding VR environment separately; the latter represents the new modality of interaction with spatially equivalent real \& virtual environments afforded by the Mirrorshades platform.
+
+
+
+
+Participants will complete a task that will promote active comparison \& contrast of the RW \& VR environments, whilst navigating a set route. This investigation will gauge through experimentation whether the Mirrorshades platform provides any value over the traditional manner in which the same VR content might be disseminated at a cultural heritage site.
 
 In all 3 scenarios (phase 1 VR, phase 1 RW, phase 2 RW + VR) the participant will navigate the same route \& will be instructed to identify a particular feature/object within the chapel (see figures \ref{pews} \& \ref{ceiling}), situated somewhere upon the set route, that differs in its appearance \&/or location between the RW \& VR chapels. The order in which the two phases are completed will be randomised between participants, as will the features that they are told to observe in each phase. Participants will have a maximum length of time to navigate the route \& will be allowed to stop before this time has elapsed should they wish.
 
@@ -77,6 +74,110 @@ In all 3 scenarios (phase 1 VR, phase 1 RW, phase 2 RW + VR) the participant wil
 %position of dividing wall
 %colour/construction of ceiling
 %number/position of lecterns
+
+
+
+
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\linewidth]{participant-m.png}
+		\caption{participant-m.png}
+		\label{participant-m.png}
+	\end{center}
+\end{figure}
+
+Studies are split into three parts; Phase 1, Phase 2.1 \& Phase 2.2.
+
+\section{The Case for Mobile XR}
+This investigation compares two scenarios for interaction with a real location \& a corresponding virtual location.
+
+\begin{enumerate}
+	\item \textbf{Stationary scenario} - interacting with the virtual location from a fixed real location, then subsequently interacting with the real location.
+	\item \textbf{Mobile scenario} - using the Mirrorshades platform to interact with both the real location \& the corresponding virtual location in tandem, whilst moving around both environments.
+\end{enumerate}
+
+The locations in question are St Salvator's chapel \& a virtual reconstruction of the chapel as it stood in 1450-1460. The stationary scenario is representative of how virtual reality technologies, including both CAVEs \& HMDs, have previously been used for dissemination of virtual reality content in cultural heritage contexts~\cite{Roussou2002} \& thus this investigation serves to compare Mirrorshades with previous applications virtual reality content to these contexts.
+
+\section{Process}
+\begin{itemize}
+	\item Participants complete a pre-task questionnaire, which provides calibration for their subsequent responses by enquiring about age, gender identity, previous experience with VR hardware \& previous interactions with either the real or virtual chapel. This questionnaire is included as Appendix \ref{pre_task_questionnaire}.
+	
+	\item Participants familiarise themselves with the experience of using the Oculus Rift DK1 HMD \& the Xbox 360 controller by interacting with the `Tuscany demo' prepared \& maintained by the Oculus VR team. This is performed from a seated position.
+	
+	\item Participants complete the stationary scenario.
+	
+	\item After completing the stationary scenario, participants complete the System Usability Scale (SUS)~\cite{Brooke1996} questionnaire, included as Appendix \ref{sus} \& a 12-item questionnaire, included as Appendix \ref{12_questions}.
+	
+	\item Participants complete the mobile scenario.
+	
+	\item After completing the mobile scenario, participants complete the SUS questionnaire \& the 12-item questionnaire again.
+	
+	\item Finally, the participant is engaged in a short structured interview. Interview prompts are included as Appendix \ref{interview_questions}.
+\end{itemize}
+
+In addition to SUS, the 12-item questionnaire \& the structured interview, quantitative data is logged by the Mirrorshades platform when a participant is interacting with virtual content in the first scenario \& at all times during the second scenario.
+
+\section{The Scenarios}
+Both scenarios that participants complete for this investigation are designed to mimic the style of exploration \& interaction that visitors to the chapel display, which was observed over several occasions. Visitors enter the chapel from the North/West corner then proceed to walk Eastwards along the nave, pausing to look around after passing through the rood screen, before continuing along the nave toward the altar. Visitors pause in front of the alter upon reaching the end of the pews \& then walk North toward the tomb where they pause again to inspect it. Participants are instructed to imagine that they are performing a similar visit to the chapel \& to follow a similar path, pausing after the rood screen, at the end of the pews \& in front of the tomb. Participants are shown the map included as figure \ref{chapel_path} to explain the scenario better.
+
+In the stationary scenario, participants interact with the virtual chapel using the Rift \& Xbox controller, whilst in a sitting position. After completing the path, they remove the headset \& then walk the same path in the real chapel. This scenario alludes to how virtual reality technologies have previously been applied to cultural heritage situations, allowing visitors to experience a virtual reality reconstruction or reimagination of the real environment from a fixed position \& with their view of the real environment wholly occluded by their view of the virtual environment.
+
+In the mobile scenario, participants wear the HMD, hold the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& battery pack in a satchel worn over the right shoulder. They then walk the same path, but this time with the ability to transition at any time between viewing the real environment \& the virtual environment from the same vantage point.
+
+In this first investigation phase, only one transition is available to participants. Preliminary experiments involving the researchers' colleagues that allowed hard transitions, linear interpolated transitions \& analogue selectable opacity, indicated that the linear interpolated transition was preferred to either the hard transition or the analogue selectable opacity \& thus this is the transition available to participants in this first phase investigation.
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\linewidth]{chapel-path.png}
+		\caption{The path \& positions within the chapel that participants are instructed to attend to.}
+		\label{chapel-path}
+	\end{center}
+\end{figure}
+
+\section{Hypotheses}
+The aim of the mobile scenario is to improve participant engagement with \& understanding of the relationships between the real \& virtual environments, by addressing the problems of spatial \& temporal separation inherent with the `traditional' stationary scenario, by imparting upon the participant the ability to transition between equivalent vantage points within the real \& virtual environments at will.
+
+While we expect participants to report that the mobile scenario does indeed allow them to better compare \& contrast the real \& virtual environments, identify differences between the real \& virtual environments \& gain a better understanding of how the real \& virtual environments relate to each other, we expect some participants to report that having to `split' their attention between the two environments in the mobile scenario leads to lessened engagement \& understanding \& that the visual quality of the real view through the headset/cameras leads to some participants preferring to interact with the real environment without the headset.
+
+We expect the cumbersome nature of the mobile scenario \& the reduced quality of viewing the real environment via the headset/cameras to have a noticeable effect upon participants movement (both position \& head orientation) in the mobile scenario.
+
+Addressing these issues, such that participants don't find viewing the real through the headset to be such a reduction in quality compared to just seeing real, such that participants feel as though they can move \& look around themselves as much in the mobile scenario as in the stationary scenario \& such that participants transition between real \& virtual at any time instead of avoiding transitions in situations in which they think that they will be unpleasant/jarring, is key \& what the next stage will focus on.
+
+%Engagement with individual environments will be lessened
+%Engagement with both environments will be increased
+%So for tasks where real time comparison \& contrast is required, this is good
+
+
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+%=========================================================================================================
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \subsection{Evaluation Techniques}
 Evaluation will be performed via a short structured interview \& completion of the System Usability Scale (SUS)~\cite{Brooke1996}.
@@ -175,74 +276,7 @@ During experiments, the video feed being displayed by the HMD will be recorded \
 
 %=========================================================================================================
 
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{participant-m.png}
-		\caption{participant-m.png}
-		\label{participant-m.png}
-	\end{center}
-\end{figure}
 
-Studies are split into three parts; Phase 1, Phase 2.1 \& Phase 2.2.
-
-\section{The Case for Mobile XR}
-This investigation compares two scenarios for interaction with a real location \& a corresponding virtual location.
-
-\begin{enumerate}
-	\item \textbf{Stationary scenario} - interacting with the virtual location from a fixed real location, then subsequently interacting with the real location.
-	\item \textbf{Mobile scenario} - using the Mirrorshades platform to interact with both the real location \& the corresponding virtual location in tandem, whilst moving around both environments.
-\end{enumerate}
-
-The locations in question are St Salvator's chapel \& a virtual reconstruction of the chapel as it stood in 1450-1460. The stationary scenario is representative of how virtual reality technologies, including both CAVEs \& HMDs, have previously been used for dissemination of virtual reality content in cultural heritage contexts~\cite{Roussou2002} \& thus this investigation serves to compare Mirrorshades with previous applications virtual reality content to these contexts.
-
-\section{Process}
-\begin{itemize}
-	\item Participants complete a pre-task questionnaire, which provides calibration for their subsequent responses by enquiring about age, gender identity, previous experience with VR hardware \& previous interactions with either the real or virtual chapel. This questionnaire is included as Appendix \ref{pre_task_questionnaire}.
-	
-	\item Participants familiarise themselves with the experience of using the Oculus Rift DK1 HMD \& the Xbox 360 controller by interacting with the `Tuscany demo' prepared \& maintained by the Oculus VR team. This is performed from a seated position.
-	
-	\item Participants complete the stationary scenario.
-	
-	\item After completing the stationary scenario, participants complete the System Usability Scale (SUS)~\cite{Brooke1996} questionnaire, included as Appendix \ref{sus} \& a 12-item questionnaire, included as Appendix \ref{12_questions}.
-	
-	\item Participants complete the mobile scenario.
-	
-	\item After completing the mobile scenario, participants complete the SUS questionnaire \& the 12-item questionnaire again.
-	
-	\item Finally, the participant is engaged in a short structured interview. Interview prompts are included as Appendix \ref{interview_questions}.
-\end{itemize}
-
-In addition to SUS, the 12-item questionnaire \& the structured interview, quantitative data is logged by the Mirrorshades platform when a participant is interacting with virtual content in the first scenario \& at all times during the second scenario.
-
-\section{The Scenarios}
-Both scenarios that participants complete for this investigation are designed to mimic the style of exploration \& interaction that visitors to the chapel display, which was observed over several occasions. Visitors enter the chapel from the North/West corner then proceed to walk Eastwards along the nave, pausing to look around after passing through the rood screen, before continuing along the nave toward the altar. Visitors pause in front of the alter upon reaching the end of the pews \& then walk North toward the tomb where they pause again to inspect it. Participants are instructed to imagine that they are performing a similar visit to the chapel \& to follow a similar path, pausing after the rood screen, at the end of the pews \& in front of the tomb. Participants are shown the map included as figure \ref{chapel_path} to explain the scenario better.
-
-In the stationary scenario, participants interact with the virtual chapel using the Rift \& Xbox controller, whilst in a sitting position. After completing the path, they remove the headset \& then walk the same path in the real chapel. This scenario alludes to how virtual reality technologies have previously been applied to cultural heritage situations, allowing visitors to experience a virtual reality reconstruction or reimagination of the real environment from a fixed position \& with their view of the real environment wholly occluded by their view of the virtual environment.
-
-In the mobile scenario, participants wear the HMD, hold the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& battery pack in a satchel worn over the right shoulder. They then walk the same path, but this time with the ability to transition at any time between viewing the real environment \& the virtual environment from the same vantage point.
-
-In this first investigation phase, only one transition is available to participants. Preliminary experiments involving the researchers' colleagues that allowed hard transitions, linear interpolated transitions \& analogue selectable opacity, indicated that the linear interpolated transition was preferred to either the hard transition or the analogue selectable opacity \& thus this is the transition available to participants in this first phase investigation.
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{chapel-path.png}
-		\caption{The path \& positions within the chapel that participants are instructed to attend to.}
-		\label{chapel-path}
-	\end{center}
-\end{figure}
-
-\section{Hypotheses}
-The aim of the mobile scenario is to improve participant engagement with \& understanding of the relationships between the real \& virtual environments, by addressing the problems of spatial \& temporal separation inherent with the `traditional' stationary scenario, by imparting upon the participant the ability to transition between equivalent vantage points within the real \& virtual environments at will.
-
-While we expect participants to report that the mobile scenario does indeed allow them to better compare \& contrast the real \& virtual environments, identify differences between the real \& virtual environments \& gain a better understanding of how the real \& virtual environments relate to each other, we expect some participants to report that having to `split' their attention between the two environments in the mobile scenario leads to lessened engagement \& understanding \& that the visual quality of the real view through the headset/cameras leads to some participants preferring to interact with the real environment without the headset.
-
-We expect the cumbersome nature of the mobile scenario \& the reduced quality of viewing the real environment via the headset/cameras to have a noticeable effect upon participants movement (both position \& head orientation) in the mobile scenario.
-
-Addressing these issues, such that participants don't find viewing the real through the headset to be such a reduction in quality compared to just seeing real, such that participants feel as though they can move \& look around themselves as much in the mobile scenario as in the stationary scenario \& such that participants transition between real \& virtual at any time instead of avoiding transitions in situations in which they think that they will be unpleasant/jarring, is key \& what the next stage will focus on.
-
-%Engagement with individual environments will be lessened
-%Engagement with both environments will be increased
-%So for tasks where real time comparison \& contrast is required, this is good
 
 \section{SUS}
 SUS scores for the mobile scenario are expected to average lower than those for the stationary scenario, due to the cumbersome nature of the platform when performing the mobile scenario; during the stationary scenario, participants are seated, whilst during the mobile scenario they are required to carry a satchel over one shoulder \& hold a smartphone in their left hand. Participants who are able to overcome this cumbersomeness are expected to respond more favourably to the mobile scenario than those who cannot overcome it.
