--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -608,7 +608,7 @@ This method allows the user to superimpose VR visual stimuli upon default visual
 
 %=========================================================================================================
 
-\pagebreak
+%\pagebreak
 
 %=========================================================================================================
 
