MShades eval stage 1

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -134,6 +134,9 @@ The stage 1 investigations took place as follows;
 %=========================================================================================================
 
 \section{Hypotheses}
+
+\textbf{***Do I actually need to have detailed hypotheses?}
+
 The aim of the PR scenario is to improve participant engagement with \& understanding of the relationships between the RW \& VR environments, by addressing the problems of spatial \& temporal separation inherent with the traditional scenario, by imparting upon the participant the ability to transition between equivalent vantage points within the RW \& VR environments at will.
 
 While it was expected for participants to report that the PR scenario did indeed allow them to better compare \& contrast the RW \& VR environments, identify differences between the RW \& VR environments \& gain a better understanding of how the RW \& VR environments relate to each other, it was expected that some participants would report that having to `split' their attention between the two environments in the PR scenario led to lessened engagement \& understanding \& that the visual quality of the RW view through the cameras led to preferring to interact with the RW environment without the DK1.
@@ -147,13 +150,12 @@ Addressing these issues, such that participants don't find viewing the real thro
 \subsection{SUS}
 SUS scores for the PR scenario are expected to average lower than those for the traditional scenario, due to the cumbersome nature of the platform when performing the mobile scenario; during the stationary scenario, participants are seated, whilst during the mobile scenario they are required to carry a satchel over one shoulder \& hold a smartphone in their left hand. Participants who are able to overcome this cumbersomeness are expected to respond more favourably to the mobile scenario than those who cannot overcome it.
 
-\subsection{12-item Questionnaire}
+\subsection{12-item Likert-type Questionnaire}
 \begin{itemize}
 	\item Participants will find it easier to compare \& contrast real \& virtual environments in the mobile scenario than in the stationary scenario (q2)
 	\item Participants will experience a greater  sense of `being in' the virtual environment in the mobile scenario than in the stationary scenario (q4, due to physical movement/embodiment)
 	\item Participants will have a greater sense of `being in the past' in the mobile scenario than in the stationary scenario (q7)
 	\item Participants will maintain greater awareness of both real \& virtual environments in the mobile scenario than in the stationary scenario (q5)
-%	\item Participants will notice more differences between real \& virtual environments in the mobile scenario than in the stationary scenario (q10)
 	\item Participants will gain a better understanding of what the chapel was like in the past in the mobile scenario than in the stationary scenario (q12)
 \end{itemize}
 
@@ -175,6 +177,32 @@ SUS scores for the PR scenario are expected to average lower than those for the 
 
 %=========================================================================================================
 
+\section{Stage 1 Results}
+
+A total of 6 participants completed the stage 1 investigation, however due to a mistake only 5 participants completed the 12-item Likert-type questionnaires correctly.
+
+For n = 6
+\begin{itemize}
+	\item age ranged from 21 to 26, mean age 23.3, sd 1.86
+	\item 3x identified as male \& 3x as female
+	\item all reported previous experience with a games console controller
+	\item 1x reported previous experience with a HMD
+	\item 2x reported having previously visited the chapel
+	\item none had previously experienced the virtual chapel
+\end{itemize}
+
+For n = 5 (excluding the participant who did not complete the 12-item Likert-type questionnaires correctly);
+\begin{itemize}
+	\item age ranged from 21 to 26, mean age 23, sd 1.87
+	\item 3x identified as male \& 2x as female
+	\item all reported previous experience with a games console controller
+	\item none reported previous experience with a HMD
+	\item 1x reported having previously visited the chapel
+	\item none had previously experienced the virtual chapel
+\end{itemize}
+
+\TwoFig{1/sus.png}{SUS results.}{sus.png}
+       {1/post_task_questionnaire_boxplot.png}{12-item questionnaire results.}{post_task_questionnaire_boxplot.png}
 
 
 
@@ -185,9 +213,7 @@ SUS scores for the PR scenario are expected to average lower than those for the 
 
 
 
-
-
-\section{Phase 1 Results}
+%=========================================================================================================
 
 \subsection{Pre-task Questionnaire}
 
@@ -210,9 +236,6 @@ The hypotheses seem to hold, in particular;
 \end{itemize}
 
 It is worth highlighting the responses to q10 in relation to those to q2. Participants reported finding it easier to compare features from the past \& present (q2) during the mobile scenario, however did not report a difference between not noticing differences between the real \& virtual environments (q10).
-
-\TwoFig{1/sus.png}{SUS results.}{sus.png}
-       {1/post_task_questionnaire_boxplot.png}{12-item questionnaire results.}{post_task_questionnaire_boxplot.png}
 
 %=========================================================================================================
 
