MShades eval, stage 1

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -668,7 +668,7 @@ The hardware components of the system that are carried by the user comprise;
 Figure \ref{DSCN0198.jpg} shows an overview of this hardware; the laptop computer is bottom left, the DK1 control box (with USB battery pack, 4-port USB hub \& Xbox controller receiver) is bottom right, the DK1 itself (with camera solution attached) is top right, the Xbox controller is top center \& the Nexus 5 smartphone is top left. Figure \ref{DSCN0191.jpg} shows a detailed view of the USB battery pack (white, bottom), the DK1 control box (directly above battery), the USB hub (on top, right) \& the Xbox controller receiver (top, left). The use of a USB hub allows there to be only two wires running between the control box bundle \& the laptop, which can be seen in figure \ref{DSCN0198.jpg} - the grey cable atop the laptop is the cable from the USB hub \& carries the DK1 head tracker information, camera feeds \& Xbox controller commands, the black cable is the HDMI cable that carries visual output from the laptop to the DK1. Unlike the DK2, which is powered solely by its USB connection, the DK1 requires an external power source as it draws more power than a single USB socket on a computer can provide. Luckily, this external power supply is rated at 5V, the same as a USB connection, so a USB battery pack that provides sufficient current (more than a computer's USB sockets, but less than high powered USB wall chargers \& battery packs) could be used to enabled the DK1 to be used mobile.
 
 \TwoFig{DSCN0198.jpg}{Mirrorshades hardware.}{DSCN0198.jpg}
-       {DSCN0191.jpg}{Detail of control box.}{DSCN0191.jpg}
+       {DSCN0191.jpg}{Detail of control box bundle.}{DSCN0191.jpg}
 
 The laptop \& control box bundle are carried in a satchel hung over the user's shoulder, the smartphone is held in their left hand \& the Xbox controller is held in their right hand. Figure \ref{participant-f.png} shows this arrangement.
 
@@ -706,7 +706,7 @@ As the user changes their position by walking, the visuals that are presented to
 %=========================================================================================================
 
 \section{Initial Testing}
-
+\label{initial-testing}
 The completed Mirrorshades platform was initially tested within the department building\footnote{\url{https://www.youtube.com/watch?v=oy5NqqDtkJ4}}, as shown in figures \ref{testing-vids-screenshots/jc-1.png} to \ref{testing-vids-screenshots/jc-4.png}. Note that this test took place with an earlier PS3 Eye based camera solution in which the camera feeds were rendered to the full expanse of the DK1's display, rather than the later C310 solution in which the camera feeds have their FOV correctly scaled to the DK1's display (see section \ref{modifying-dk1}). This initial integration test confirmed the correct functioning of the platform as a whole \& that the accuracy of the IPS was great enough for the desired modality of interaction, at least within the department building with its abundance of metal building materials \& electricla provisions.
 
 \TwoFig{testing-vids-screenshots/jc-1.png}{Mirrorshades test in department building.}{testing-vids-screenshots/jc-1.png}
