--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,4 +1,4 @@
-The design \& development of the Mirrorshades platform was driven both to investigate mobile PR systems as a concept in general \& to assess their suitability when applied to a particular case study as a new modality for interacting with virtual content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to `traditional' virtual heritage experiences \& secondly studied reactions to \& preferences toward different PR implementations with regards to the default view \& provided transition styles.
+The design \& development of the Mirrorshades platform was driven both to investigate mobile PR systems as a concept in general \& to assess their suitability when applied to a particular case study as a new modality for interacting with virtual content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to a `traditional' virtual heritage experience \& secondly studied reactions to/preferences toward different PR implementations with regards to the default view \& transition styles provided.
 
 %=========================================================================================================
 
@@ -10,32 +10,30 @@ The design \& development of the Mirrorshades platform was driven both to invest
 
 \section{Overview}
 
-The evaluation process was divided into two stages; the first assessed the utility of Mirrorshades as a mobile PR platform in comparison to existing VR techniques used within a virtual heritage context, while the second investigated participants' preferences \& reactions to different transition styles to inform further PR implementations. A combination of qualitative \& quantitative data were collected for both stages, as the nature of the platform experience is such that purely quantitative data is not sufficient to gain an insight into the desired metrics, but can be used to corroborate, or rebut, qualitative responses \& observations.
+The evaluation process was divided into two stages; the first assessed the utility of Mirrorshades as a mobile PR platform in comparison to existing VR techniques used within a virtual heritage context, while the second investigated participants' preferences \& reactions to different transition styles, in order to inform further PR implementations. A combination of qualitative \& quantitative data were collected for both stages, as the nature of the platform experience is such that purely quantitative data is not sufficient to gain an insight into the desired metrics, but is nonetheless useful to corroborate, or rebut, qualitative responses \& observations.
 
-Participants were sourced by adverts disseminated via an internal university memo system, which sends an email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study'}, \textit{`investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was taken instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system \& its implementation rather than the actual experience of using the system. In total 17 participants, 10x male \& 7x female, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in user studies, each lasting 20-30 minutes. All studies took place at St Salvator's chapel during afternoon hours, with the chapel open to the general public.
+Participants were sourced by adverts disseminated via an internal university memo system, which sends an email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study \ldots\ investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was adopted instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system \& its implementation rather than the actual experience of using the system. In total 17 participants, 10x male \& 7x female, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in the user studies, each lasting 20-30 minutes. All studies took place at St Salvator's chapel during afternoon hours, with the chapel open to the general public.
 
 %=========================================================================================================
 
 \section{Stage 1 - PR for Virtual Heritage}
 
-Previously when VR has been employed in virtual heritage scenarios, it has predominantly been implemented via CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre will be offered the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of a location, its contents \& actors. Some of these CAVE installations have featured physical control interfaces such as joystick \& 3D mouse~\cite{cabral:x3dexperience} \& even haptic interfaces~\cite{Christou2006}, while others have tracked user movement, whether only head or full body  gestures (such as in figure \ref{VTTP_projection.png}). In common among these CAVE experiences is the fact that the VR content they present is experienced with a disconnect to the RW site that it pertains to, as the CAVE itself immerses users in VR visuals \& does not permit them to see any of their RW surroundings. Furthermore, the physical size of the CAVE limits the amount in any particular direction that a user can move, even if movement is encouraged due to its use as a control methodology.
+Previously when VR has been employed in virtual heritage scenarios, it has predominantly been implemented as CAVE experiences~\cite{Roussou2002}. Visitors to a museum or visitor centre will be offered the opportunity to step into a CAVE, possibly donning shutter glasses or similar apparatus to enable a stereoscopic 3D effect, to experience a VR reconstruction of a location, its contents \& actors. Some of these CAVE installations have featured physical control interfaces such as joystick \& 3D mouse~\cite{cabral:x3dexperience} \& haptic interfaces~\cite{Christou2006}, while others have tracked user movement, whether head only or full body  gestures (such as in figure \ref{VTTP_projection.png}). In common among these CAVE experiences is the fact that the VR content they present is experienced with a disconnect to the RW site that it pertains to, as the CAVE itself immerses users in VR visuals \& does not permit them to see any of their RW surroundings, comparable to the experience of weareing a VR HMD without see-through video functionality. Furthermore, the physical size of the CAVE limits the amount in any particular direction that a user can physically move, even if movement is encouraged due to its use as a control methodology.
 
-With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use at cultural heritage sites for achieving similar experiences to previous CAVE installations is becoming plausible \& brings with it certain benefits such as required space. The OVW group's experience with presenting both experts \& interested amateurs, young \& old, with virtual heritage content via Oculus HMDs (see section \ref{virtual-heritage-at-st-andrews}) has been very promising. These interactions have taken place in scenarios similar to those of existing CAVE scenarios; the user remains physically stationary \& uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe their RW environment due to the nature of the HMD isolating them from RW visual stimuli.
+With the promise of high performance VR HMDs at a consumer price point on the horizon, thanks largely to the rejuvenation in the field effected by Oculus, their use at cultural heritage sites for achieving similar experiences to previous CAVE installations is becoming more plausible \& brings with it certain benefits such as a reduction in the physical space required at the site for the installation. The OVW group's experience with presenting both experts \& interested amateurs, young \& old, with virtual heritage content via Oculus HMDs (both DK1 \& DK2, see section \ref{virtual-heritage-at-st-andrews}) has been very promising. These interactions have taken place in scenarios similar to those of existing CAVE scenarios; the user remains physically stationary \& uses a controller or gestures to move their virtual presence throughout the VR environment, whilst unable to observe their RW environment due to the nature of the HMD isolating them from RW visual stimuli.
 
-In this first stage of the evaluation a comparison is made of this `traditional' style of interacting with VR content at a cultural heritage site wherein the virtual is experienced in isolation from the real, with both temporal \& spatial separation, against the `new' style afforded by the Mirrorshades platform in which the virtual can be experienced in tandem with the real by allowing the user to move around their RW environment \& transition at any time into seeing the VR environment from the equivalent vantage point. This stage of the evaluation thus comprises two scenarios for interaction with the real St Salvator's chapel \& its corresponding VR reconstruction;
+In this first stage of the evaluation a comparison is made of this `traditional' style of interacting with VR content at a cultural heritage site wherein VR is experienced in isolation from RW, with both temporal \& spatial separation, against the `new' style afforded by the Mirrorshades platform, in which VR can be experienced in tandem with RW by allowing the user to move around their RW environment \& transition at any time into seeing the VR environment from the equivalent vantage point. Participants in this stage of the evaluation thus complete two scenarios wherein they interact with the RW St Salvator's chapel \& its corresponding VR reconstruction;
 
 \begin{enumerate}
-	\item \textbf{Traditional scenario} - Participants experience the RW \& VR chapels separately. They navigate the VR chapel from a stationary position, as VR has traditionally been employed at cultural heritage sites via CAVE installations, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring their view of the RW chapel around them. Subsequently, they navigate the RW chapel without the DK1 or any associated equipment.
+	\item \textbf{Traditional scenario} - Participants experience the RW \& VR chapels separately. They navigate the VR chapel from a stationary position, as VR has traditionally been employed at cultural heritage sites via CAVE installations \& by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring their view of the RW chapel around them. Subsequently, they navigate the RW chapel without the DK1 or any associated equipment.
 	\item \textbf{PR scenario} - Participants experience the RW \& VR chapels in tandem using the Mirrorshades platform. They wear the DK1, holding the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over one shoulder. Pressing a button on the Xbox controller triggers a transition between RW \& VR visual stimuli being displayed by the DK1.
 \end{enumerate}
-
-In the PR scenario, participants had access to a single transition style; the transition with linear interpolation (section \ref{transition-with-linear-interpolation}). The default view on the DK1's screen was 100\% RW (visualised upon the combined model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}).
 
 %=========================================================================================================
 
 \subsection{Design of the Scenarios}
 
-Both scenarios were designed to mimic the style of exploration \& interaction that visitors to the chapel display, by observing the behaviour of visitors to the chapel on several occasions. From these observations, a common pattern of behaviour emerged: visitors enter the chapel from the North/West corner then proceed to walk Eastwards along the nave, pausing to look around after passing through the rood screen, before continuing along the nave toward the altar. They then pause in front of the alter upon reaching the end of the pews \& then walk North toward the tomb where they pause again to inspect it. Participants in the first stage of the evaluation process were instructed to imagine that they were performing a similar visit to the chapel \& to follow a similar path, pausing after the rood screen, at the end of the pews \& in front of the tomb. Participants were shown the map included as figure \ref{chapel-path} to help visualise the instructions.
+The scenarios were intended to mimic the style of exploration \& interaction that visitors to the chapel display, after observing the behaviour of such visitors on several occasions. From these observations, a common pattern of behaviour emerged: visitors enter the chapel from the North/West corner then proceed to walk Eastwards along the nave, pausing to look around after passing through the rood screen, before continuing along the nave toward the altar. They then pause in front of the alter upon reaching the end of the pews \& then walk North toward the tomb where they pause again to inspect it. Participants in this first stage of the evaluation process were instructed to imagine that they were performing a similar visit to the chapel \& to follow a similar path, pausing after the rood screen, at the end of the pews \& in front of the tomb to look around their environment(s) in more detail, however they were encouraged to stop \& look around at any times/positions that they wished \& not to feel restricted to the specific path \& locations. The intent of the scenario was to encourage a natural style of exploration despite the unusual situation of making use of bulky VR hardware, rather than to restrict them to an `on rails' experience. Participants were shown the map included as figure \ref{chapel-path} (North upwards) to help visualise the instructions.
 
 \begin{figure}[h]
 	\begin{center}
@@ -45,7 +43,9 @@ Both scenarios were designed to mimic the style of exploration \& interaction th
 	\end{center}
 \end{figure}
 
-In the traditional scenario, participants interacted with the VR chapel using the DK1 \& Xbox controller, whilst seated. After completing the path in the VR chapel, they removed the DK1 \& walked the same path in the RW chapel. This behaviour alludes to how VR has previously been applied to cultural heritage sites such as St Salvator's chapel, wherein visitors would have the opportunity to experience a CAVE based reconstruction of the site either before or after having explored the RW site. In the PR scenario, participants wore the DK1, held the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over a shoulder. They then walked the same path, but this time with the ability to transition at any time between viewing the RW chapel \& the VR chapel from the same vantage point, by using the \texttt{A} button on the controller to trigger a transition with linear interpolated.
+In the traditional scenario, participants interacted with the VR chapel using the DK1 \& Xbox controller, whilst seated. After completing the path in the VR chapel, they removed the DK1 \& walked the same path in the RW chapel. This behaviour alludes to how VR has previously been applied to cultural heritage sites such as St Salvator's chapel, wherein visitors would have the opportunity to experience a CAVE or stationary HMD based reconstruction of the site either before or after having explored the RW site. In the PR scenario, participants wore the DK1, held the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over a shoulder. They then walked the same path, but this time with the ability to transition at any time between viewing the RW chapel \& the VR chapel from the same vantage point.
+
+In the PR scenario, participants had access to a single transition style, the transition with linear interpolation (section \ref{transition-with-linear-interpolation}), triggered by pressing \& holding the \texttt{A} button on the Xbox controller. As mentioned in section \ref{initial-testing}, this transition emerged as the `favourite' during initial tests within the OVW group. As such, it was chosen as the only transition style for the PR scenario in this first stage of evaluation wherein the focus of the investigation was upon comparing the PR scenario to the traditional scenario experience \& not upon gleaning details of the merits \& drawbacks exhibited by different PR implementations. The default view on the DK1's screen was 100\% RW with the transition causing a change to 100\% VR, a situation visualised upon the combined model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}.
 
 %=========================================================================================================
 
