Move to 1.5 spacing

--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -4,7 +4,6 @@
 \hfill \textit{Ready Player One, Ernest Cline}
 \\
 \\
-\\
 
 %=========================================================================================================
 
@@ -214,8 +213,6 @@ The C310 cameras received the same attention as the PS3 Eye cameras; they were d
 
 \TwoFig{rift-clips-cameras/middle.jpg}{C310 mounted to DK1 (front view).}{middle.jpg}
        {rift-clips-cameras/right.jpg}{C310 mounted to DK1 (detail view).}{right.jpg}
-
-\clearpage
 
 %=========================================================================================================
 
@@ -670,17 +667,7 @@ Figure \ref{DSCN0198.jpg} shows an overview of this hardware; the laptop compute
 \TwoFig{DSCN0198.jpg}{Mirrorshades hardware.}{DSCN0198.jpg}
        {DSCN0191.jpg}{Detail of control box bundle.}{DSCN0191.jpg}
 
-The laptop \& control box bundle are carried in a satchel hung over the user's shoulder, the smartphone is held in their left hand \& the Xbox controller is held in their right hand. Figure \ref{participant-f.png} shows this arrangement.
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{participant-f.png}
-		\caption{Participant using the Mirrorshades platform at St Salvator's chapel.}
-		\label{participant-f.png}
-	\end{center}
-\end{figure}
-
-In addition to this hardware carried by the user, a remote server is used to provide a MySQL database. During the user studies at St Salvator's chapel, the server used had an Intel Xeon E3-1270 four-core/eight-thread processor, 32GiB RAM, 4x WD RE4 1TB hard disks in software RAID6 \& 100mbit/s Internet connectivity. This server ran the Debian stable release, with a standard LAMP stack \& mdadm for RAID management.
+The laptop \& control box bundle are carried in a satchel hung over the user's shoulder, the smartphone is held in their left hand \& the Xbox controller is held in their right hand. In addition to this hardware carried by the user, a remote server is used to provide a MySQL database. During the user studies at St Salvator's chapel, the server used had an Intel Xeon E3-1270 four-core/eight-thread processor, 32GiB RAM, 4x WD RE4 1TB hard disks in software RAID6 \& 100mbit/s Internet connectivity. This server ran the Debian stable release, with a standard LAMP stack \& mdadm for RAID management.
 
 \subsection{Software Components}
 The software components of the system comprise;
