--- a/thesis.tex
+++ b/thesis.tex
@@ -7,6 +7,10 @@
 \usepackage{graphicx}
 \usepackage{appendix}
 
+%line spacing
+\usepackage{setspace}
+\linespread{1.5}
+
 %tables that can span page breaks
 \usepackage{longtable}
 
@@ -97,7 +101,7 @@
 	\textbf{\Huge{Parallel Reality: Tandem Exploration of Real \& Virtual Environments}}
 \end{center}
 
-\vspace{20mm}
+\vspace{15mm}
 
 \begin{center}
 	\textbf{\Huge{CJ Davies}}
@@ -115,7 +119,7 @@
 	at the University of St Andrews}
 \end{center}
 
-\vspace{6mm}
+\vspace{2mm}
 
 \begin{center}
 	\Large{March 2015}
