--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -12,7 +12,23 @@ The design \& development of the Mirrorshades platform was driven both to invest
 
 The evaluation process was divided into two stages; the first assessed the utility of Mirrorshades as a mobile PR platform in comparison to existing VR techniques used within a virtual heritage context, while the second investigated participants' preferences \& reactions to different transition styles, in order to inform further PR implementations. A combination of qualitative \& quantitative data were collected for both stages, as the nature of the platform experience is such that purely quantitative data is not sufficient to gain an insight into the desired metrics, but is nonetheless useful to corroborate, or rebut, qualitative responses \& observations.
 
-Participants were sourced by adverts disseminated via an internal university memo system, which sends an email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study \ldots\ investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was adopted instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system \& its implementation rather than the actual experience of using the system. In total 17 participants, 10x male \& 7x female, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in the user studies, each lasting 20-30 minutes. All studies took place at St Salvator's chapel during afternoon hours, with the chapel open to the general public.
+Participants were sourced by adverts disseminated via an internal university memo system, which sends email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study \ldots\ investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was adopted instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system \& its implementation rather than the actual experience of using the system. In total 17 participants, 10x male \& 7x female, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in the user studies, each lasting 20-30 minutes. All studies took place at St Salvator's chapel during afternoon hours, with the chapel open to the general public.
+
+\begin{figure}[ht]
+	\begin{center}
+		\includegraphics[width=\linewidth]{participant-f.png}
+		\caption{Participant using Mirrorshades in a user study at St Salvator's chapel.}
+		\label{participant-f.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}[ht]
+	\begin{center}
+		\includegraphics[width=\linewidth]{participant-m.png}
+		\caption{Participant using Mirrorshades in a user study at St Salvator's chapel.}
+		\label{participant-m.png}
+	\end{center}
+\end{figure}
 
 %=========================================================================================================
 
@@ -51,7 +67,7 @@ In the PR scenario, participants had access to a single transition style, the tr
 
 \subsection{Evaluation Techniques}
 
-The comparison of the traditional scenario against the PR scenario included collection of a variety of both qualitative \& quantitative data. All participants completed a pre-task questionnaire, which provided calibration for their responses by enquiring about age, gender identity \& most importantly any previous experience with VR hardware \& St Salvtor's chapel (either real or virtual). The System Usability Scale (SUS)~\cite{Brooke1996} was used to provide a basic comparison between the usability of the two scenarios, while a 12-item Likert-type questionnaire was used to collect opinions on more specific aspects of the experience of both scenarios. At the end of the session, participants were engaged in a short structured interview in order to allow them to elaborate upon their experience in a more free form manner. Finally, in addition to the DK1 visuals being recorded via ShadowPlay, log data was collected during both scenarios, capturing the following information to a tab separated variable (\texttt{.tsv}) file for each frame rendered to the DK1's screen;
+The comparison of the traditional scenario against the PR scenario included collection of a variety of both qualitative \& quantitative data. All participants completed a pre-task questionnaire which provided calibration for latter data by enquiring about age, gender identity, previous experience with VR HMDs \& whether they had previously visited St Salvtor's chapel, both RW \& VR (the RW chapel is open to the public \& a version of the VR reconstruction is publicly accessible via the OVW group's OpenSim grid). The System Usability Scale (SUS)~\cite{Brooke1996} was used to provide a basic comparison between the usability of the two scenarios, while a 12-item Likert-type questionnaire was used to collect opinions on more specific aspects of the experience of both scenarios. At the end of the session, participants were engaged in a short structured interview in order to allow them to elaborate upon their experience in a more free form manner. Finally, in addition to the DK1 visuals being recorded via ShadowPlay, log data was collected during both scenarios, capturing the following information to a tab separated variable (\texttt{.tsv}) file for each frame rendered to the DK1's screen;
 
 \begin{center}
 \begin{longtable}{| l | p{8cm} |}
@@ -135,45 +151,43 @@ The stage 1 investigations took place as follows;
 
 \section{Hypotheses}
 
-\textbf{***Do I actually need to have detailed hypotheses?}
+This first stage of evaluation was designed to ascertain whether applying mobile PR to a cultural heritage scenario results in an improvement in participant engagement with \& understanding of the relationships between the RW \& VR environments, compared to a traditional virtual heritage scenario, by addressing the problems of spatial \& temporal separation inherent with the traditional scenario by imparting upon the participant the ability to transition at will between equivalent vantage points within the RW \& VR environments.
 
-The aim of the PR scenario is to improve participant engagement with \& understanding of the relationships between the RW \& VR environments, by addressing the problems of spatial \& temporal separation inherent with the traditional scenario, by imparting upon the participant the ability to transition between equivalent vantage points within the RW \& VR environments at will.
-
-While it was expected for participants to report that the PR scenario did indeed allow them to better compare \& contrast the RW \& VR environments, identify differences between the RW \& VR environments \& gain a better understanding of how the RW \& VR environments relate to each other, it was expected that some participants would report that having to `split' their attention between the two environments in the PR scenario led to lessened engagement \& understanding \& that the visual quality of the RW view through the cameras led to preferring to interact with the RW environment without the DK1.
+Participants were expected to report that the PR scenario did allow them to better compare \& contrast the RW \& VR environments, identify differences between the RW \& VR environments \& gain a better understanding of how the RW \& VR environments relate to each other. However it was also expected that some participants would report that having to `split' their attention between the two environments in the PR scenario led to lessened engagement \& understanding \& that the visual quality of the RW view through the cameras led to them preferring the traditional scenario.
 
 It was expected that the cumbersome nature of the PR scenario in terms of the hardware that needed to be carried by the participant \& the reduced quality of viewing the RW environment via the cameras would have a noticeable effect upon participants' movement (both position \& head orientation) in the PR scenario, most likely a restriction.
 
-Addressing these issues, such that participants don't find viewing the real through the headset to be such a reduction in quality compared to just seeing real, such that participants feel as though they can move \& look around themselves as much in the mobile scenario as in the stationary scenario \& such that participants transition between real \& virtual at any time instead of avoiding transitions in situations in which they think that they will be unpleasant/jarring, is key \& what the stage 2 investigation focused on.
+SUS scores for the PR scenario were expected to average lower than those for the traditional scenario, due to the cumbersome nature of the platform when performing the mobile scenario; during the stationary scenario, participants are seated, whilst during the mobile scenario they are required to carry a satchel over one shoulder \& hold a smartphone in their left hand. Participants who were able to overcome this cumbersomeness were expected to respond more favourably to the mobile scenario than those who could not.
 
-%=========================================================================================================
-
-\subsection{SUS}
-SUS scores for the PR scenario are expected to average lower than those for the traditional scenario, due to the cumbersome nature of the platform when performing the mobile scenario; during the stationary scenario, participants are seated, whilst during the mobile scenario they are required to carry a satchel over one shoulder \& hold a smartphone in their left hand. Participants who are able to overcome this cumbersomeness are expected to respond more favourably to the mobile scenario than those who cannot overcome it.
-
-\subsection{12-item Likert-type Questionnaire}
+The 12-item Likert-type questionnaire was expected to reveal several distinctions. In particular;
 \begin{itemize}
-	\item Participants will find it easier to compare \& contrast real \& virtual environments in the mobile scenario than in the stationary scenario (q2)
-	\item Participants will experience a greater  sense of `being in' the virtual environment in the mobile scenario than in the stationary scenario (q4, due to physical movement/embodiment)
-	\item Participants will have a greater sense of `being in the past' in the mobile scenario than in the stationary scenario (q7)
-	\item Participants will maintain greater awareness of both real \& virtual environments in the mobile scenario than in the stationary scenario (q5)
-	\item Participants will gain a better understanding of what the chapel was like in the past in the mobile scenario than in the stationary scenario (q12)
+	\item Participants will find it easier to compare \& contrast RW \& VR environments in the PR scenario than in the traditional scenario (q2)
+	\item Participants will experience a greater  sense of `being in' the VR environment in the PR scenario than in the traditional scenario, due to physical movement/embodiment~\cite{Groten2011} (q4)
+	\begin{itemize}
+		\item Furthermore, participants will have a greater sense of `being in the past' in the PR scenario than in the traditional scenario (q7)
+	\end{itemize}
+	\item Participants will maintain greater awareness of both RW \& VR environments in the PR scenario than in the traditional scenario (q5)
+	\item Participants will notice more differences between RW \& VR environments in the PR scenario than in the traditional scenario (q10)	
+	\item Participants will gain a better understanding of what the chapel was like in the past in the PR scenario than in the traditional scenario (q12)
 \end{itemize}
 
-\subsection{Log data}
+In addition to substantiating or refuting questionnaire results \& interview responses, the log data themselves were expected to provide insight into relationships between several aspects of the traditional \& PR scenarios, such as;
 \begin{itemize}
-	\item Head movement (pitch \& yaw) will be more restricted in the mobile scenario compared to the stationary scenario
-	\item Aversion to looking around (even at real) when moving in the mobile scenario
-	\item Head movements will be larger discrete changes in the stationary scenario compared to the mobile scenario
-	\item Tendency to only look at virtual when looking around
+	\item Head movement (pitch \& yaw) will be more restricted in the PR scenario compared to the traditional scenario
+	\item Participants will display an aversion to looking around (even at RW) when moving in the mobile scenario
+	\item Head movements will be larger discrete changes in the traditional scenario compared to the PR scenario
+	\item Tendency to only look at VR when looking around
 \end{itemize}
 
-\subsection{Interviews}
+Interview transcripts were expected to lend support to the following assumptions;
 \begin{itemize}
-	\item mobile scenario makes it easier to spot differences
-	\item mobile scenario reveals differences that stationary didn't
-	\item stationary does not reveal differences that mobile doesn't
-	\item mobile scenario is preferred \& is user-reported as 'more engaging'
+	\item the PR scenario makes it easier to spot differences between RW \& VR than the traditional scenario
+	\item the PR scenario reveals differences that the traditional scenario didn't
+	\item the traditional scenario does not reveal differences that the PR scenario didn't
+	\item the PR scenario is preferred \& is user-reported as 'more engaging' than the traditional scenario
 \end{itemize}
+
+Assessing the severity of the issues raised by this first stage of investigation is important such that future PR implementations can be informed to allow them to achieve a quality of experience where participants do not feel that the drawbacks outweigh the benefits, such as feeling restricted from performing transitions due to the jarring nature of them or preferring a traditional scenario compared to a PR scenario because the visual acuity of seeing the RW unmediated compared to mediated via a video see-through HMD is so much better that the immediacy of comparison between RW \& VR afforded by the PR scenario is not a big enough incentive.
 
 %=========================================================================================================
 
@@ -200,6 +214,8 @@ For n = 5 (excluding the participant who did not complete the 12-item Likert-typ
 	\item 1x reported having previously visited the chapel
 	\item none had previously experienced the virtual chapel
 \end{itemize}
+
+As expected, the PR scenario scored lower on SUS than the traditional scenario (see figure \ref{sus.png}). Comparing the SUS results
 
 \TwoFig{1/sus.png}{SUS results.}{sus.png}
        {1/post_task_questionnaire_boxplot.png}{12-item questionnaire results.}{post_task_questionnaire_boxplot.png}
@@ -382,14 +398,6 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \section{Stage 2}
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{participant-m.png}
-		\caption{participant-m.png}
-		\label{participant-m.png}
-	\end{center}
-\end{figure}
 
 \subsection{Evaluation}
 
